--- a/app/admin/view/Role/adminadd.html
+++ b/app/admin/view/Role/adminadd.html
@@ -7,7 +7,7 @@
 	<div class="row cl">
 		<label class="form-label col-xs-4 col-sm-3"><span class="c-red">*</span>管理员：</label>
 		<div class="formControls col-xs-8 col-sm-9">
-			<input type="text" class="input-text" value="{$user.username}" placeholder="" id="adminName" name="adminName">
+			<input type="text" class="input-text" value="" placeholder="" id="adminName" name="adminName">
 		</div>
 	</div>
 	<div class="row cl">
@@ -26,13 +26,13 @@
 	<div class="row cl">
 		<label class="form-label col-xs-4 col-sm-3"><span class="c-red">*</span>手机：</label>
 		<div class="formControls col-xs-8 col-sm-9">
-			<input type="text" class="input-text" value="{$user.phone}" placeholder="" id="phone" name="phone">
+			<input type="text" class="input-text" value="" placeholder="" id="phone" name="phone">
 		</div>
 	</div>
 	<div class="row cl">
 		<label class="form-label col-xs-4 col-sm-3"><span class="c-red">*</span>邮箱：</label>
 		<div class="formControls col-xs-8 col-sm-9">
-			<input type="text" class="input-text" placeholder="@" name="email" id="email" value="{$user.email}">
+			<input type="text" class="input-text" placeholder="@" name="email" id="email" value="">
 		</div>
 	</div>
 	<div class="row cl">
