--- a/app/admin/view/Role/adminlist.html
+++ b/app/admin/view/Role/adminlist.html
@@ -30,11 +30,11 @@
 		{volist name="user" id="vo"}
 			<tr class="text-c">
 				<td><input type="checkbox" value="1" name=""></td>
-				<td>1</td>
+				<td>{$vo.admin_id}</td>
 				<td>{$vo.user_name}</td>
 				<td>{$vo['telephone']? $vo['telephone'] : '无'}</td>
 				<td>{$vo['email']? $vo['email'] : '无'}</td>
-				<td>超级管理员</td>
+				<td>{$vo.jue}</td>
 				<td>{$vo.create_time|date='Y-m-d H:i:s',###}</td>
 				<td class="td-status">
 					{switch name="$vo.status"}
@@ -42,7 +42,14 @@
 						{case value="1"}<span class="label label-success radius">已启用</span>{/case}
 					{/switch}
 				</td>
-				<td class="td-manage"><a style="text-decoration:none" onClick="admin_stop(this,'{$vo.admin_id}')" href="javascript:;" title="停用"><i class="Hui-iconfont">&#xe631;</i></a> <a title="编辑" href="javascript:;" onclick='admin_edit("管理员编辑","{:url("Role/admin_add")}","1","800","500")' class="ml-5" style="text-decoration:none"><i class="Hui-iconfont">&#xe6df;</i></a> <a title="删除" href="javascript:;" onclick='admin_del(this,"{$vo.admin_id}")' class="ml-5" style="text-decoration:none"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				<td class="td-manage">
+					{switch name="$vo.status"}
+						{case value="0"}<a onClick="admin_start(this,'{$vo.admin_id}')" href="javascript:;" title="启用" style="text-decoration:none"><i class="Hui-iconfont">&#xe615;</i></a>{/case}
+						{case value="1"} <a style="text-decoration:none" onClick="admin_stop(this,'{$vo.admin_id}')" href="javascript:;" title="停用"><i class="Hui-iconfont">&#xe631;</i></a> 	{/case}
+					{/switch}
+					<a title="编辑" href="javascript:;" onclick='admin_edit("管理员编辑","{:url("Role/admin_add")}","1","800","500")' class="ml-5" style="text-decoration:none"><i class="Hui-iconfont">&#xe6df;</i></a> 
+					<a title="删除" href="javascript:;" onclick='admin_del(this,"{$vo.admin_id}")' class="ml-5" style="text-decoration:none"><i class="Hui-iconfont">&#xe6e2;</i></a>
+				</td>
 			</tr>
 		{/volist}
 		</tbody>
@@ -96,10 +103,6 @@ function admin_edit(title,url,id,w,h){
 function admin_stop(obj,id){
 	console.log(obj);
 	layer.confirm('确认要停用吗？',function(index){
-			// $(obj).parents("tr").find(".td-manage").prepend('<a onClick="admin_start(this,id)" href="javascript:;" title="启用" style="text-decoration:none"><i class="Hui-iconfont">&#xe615;</i></a>');
-			// 		$(obj).parents("tr").find(".td-status").html('<span class="label label-default radius">已禁用</span>');
-			// 		$(obj).remove();
-			// 		layer.msg('已停用!',{icon: 5,time:1000});
 		//此处请求后台程序，下方是成功后的前台处理……
 		$.ajax({
 			type: 'POST',
@@ -112,7 +115,7 @@ function admin_stop(obj,id){
 			success: function(res){
 				console.log(res)
 				if (res.code ==1){
-					$(obj).parents("tr").find(".td-manage").prepend('<a onClick="admin_start(this,id)" href="javascript:;" title="启用" style="text-decoration:none"><i class="Hui-iconfont">&#xe615;</i></a>');
+					$(obj).parents("tr").find(".td-manage").prepend('<a onClick="admin_start(this,'+res.id+')" href="javascript:;" title="启用" style="text-decoration:none"><i class="Hui-iconfont">&#xe615;</i></a>');
 					$(obj).parents("tr").find(".td-status").html('<span class="label label-default radius">已禁用</span>');
 					$(obj).remove();
 					layer.msg('已停用!',{icon: 5,time:1000});
@@ -127,6 +130,7 @@ function admin_stop(obj,id){
 
 /*管理员-启用*/
 function admin_start(obj,id){
+		console.log(id);
 	layer.confirm('确认要启用吗？',function(index){
 		//此处请求后台程序，下方是成功后的前台处理……
 		$.ajax({
@@ -138,8 +142,8 @@ function admin_start(obj,id){
 			url: "{:url('Role/status')}",
 			dataType: 'json',
 			success: function(res){
-				if (res.code ==1){
-				$(obj).parents("tr").find(".td-manage").prepend('<a onClick="admin_stop(this,id)" href="javascript:;" title="停用" style="text-decoration:none"><i class="Hui-iconfont">&#xe631;</i></a>');
+			if (res.code ==1){
+				$(obj).parents("tr").find(".td-manage").prepend('<a onClick="admin_stop(this,'+res.id+')" href="javascript:;" title="停用" style="text-decoration:none"><i class="Hui-iconfont">&#xe631;</i></a>');
 				$(obj).parents("tr").find(".td-status").html('<span class="label label-success radius">已启用</span>');
 				$(obj).remove();
 				layer.msg('已启用!', {icon: 6,time:1000});
@@ -147,9 +151,7 @@ function admin_start(obj,id){
 				layer.msg('失败!', {icon: 6,time:1000});
 				}
 			}
-		)}
-	
-	
+		})
 	});
 }
 </script>
